# StudyLog

./: .gitignore  README.md  dockerfile  extension.py  main.py  makefile.bat  pyproject.toml  requirements local.txt  requirements.txt  requirements_web.txt
StudyLogApp/: calculate.py  db.py  extension.py  login.py  utils.py
data/: Readme.md
