[project]
name = "studylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiohttp-jinja2==1.6",
    "aiosignal==1.3.2",
    "altgraph==0.17.4",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "frozenlist==1.6.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jinja2==3.1.6",
    "linkify-it-py==2.0.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "multidict==6.4.3",
    "packaging==24.2",
    "pefile==2023.2.7",
    "platformdirs==4.3.7",
    "plotext==5.3.2",
    "propcache==0.3.1",
    "pygments==2.19.1",
    "pyinstaller==6.12.0",
    "pyinstaller-hooks-contrib==2025.2",
    "pywin32-ctypes==0.2.3",
    "rich==14.0.0",
    "textual==3.0.1",
    "textual-dev==1.7.0",
    "textual-plotext==1.0.1",
    "textual-serve==1.1.2",
    "typing-extensions==4.13.1",
    "uc-micro-py==1.0.3",
    "yarl==1.20.0",
    "zipp==3.21.0",
]
